--- a/vercel.json
+++ b/vercel.json
@@ -23,7 +23,7 @@
 
     {
       "source": "/term-and-conditions",
-      "destination": "/terms-and-conditions.html"
+      "destination": "/terms-and-condition.html"
     },
     {
       "source": "/ssl",
